# eta-hackage

./: .gitignore  .travis.yml  README.md  WORKING  circle.yml  eta-hackage.cabal  old.circle.yml  packages.json
.circle/: config.yml
.circleci/: config.yml
patches/: Agda-2.5.4.1.patch  Elm-0.13.cabal  Elm-0.13.patch  FontyFruity-0.5.3.3.cabal  FontyFruity-0.5.3.3.patch  Glob-0.9.1.cabal  Glob-0.9.1.patch  Glob-0.9.2.cabal  Glob-0.9.2.patch  HaXml-1.25.4.cabal  HaXml-1.25.4.patch  JuicyPixels-3.2.9.5.cabal  JuicyPixels-3.2.9.5.patch  JuicyPixels-3.3.cabal  JuicyPixels-3.3.patch  MissingH-1.4.0.1.cabal  MissingH-1.4.0.1.patch  OneTuple-0.2.1.cabal  OneTuple-0.2.1.patch  QuickCheck-2.10.0.1.cabal  QuickCheck-2.10.1.cabal  QuickCheck-2.10.1.patch  QuickCheck-2.9.2.cabal  QuickCheck-2.9.2.patch  StateVar-1.1.1.0.cabal  StateVar-1.1.1.0.patch  aeson-0.11.0.0.cabal  aeson-0.11.0.0.patch  aeson-0.11.3.0.cabal  aeson-0.11.3.0.patch  aeson-1.1.0.0.cabal  aeson-1.1.0.0.patch  aeson-1.1.1.0.cabal  aeson-1.1.1.0.patch  aeson-1.1.2.0.cabal  aeson-1.1.2.0.patch  aeson-1.2.0.0.cabal  aeson-1.2.0.0.patch  aeson-1.2.1.0.cabal  aeson-1.2.1.0.patch  (+731 more)
scripts/: eta-install.sh
temporary-1.2.1.1/: CHANGELOG.md  temporary.cabal
temporary-1.2.1.1/System/IO/: Temp.hs
temporary-1.2.1.1/tests/: test.hs
test/: Main.hs  Test.hs
