name:                eta-hackage
version:             0.1.0.0
author:              Rahul Muttineni
maintainer:          rahulmutt@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable eta-hackage
  main-is:             test/Main.hs
  build-depends:       base >=4.8 && <4.9
                     , aeson
                     , bytestring
                     , directory
                     , filepath
                     , text
                     , process
  default-language:    Haskell2010