name:                eta-hackage
version:             0.1.0.0
author:              Rahul Muttineni
maintainer:          rahulmutt@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable eta-hackage
  main-is:             test/Main.hs
  build-depends:       base >=4.8 && <4.12
                     , aeson
                     , bytestring
                     , directory
                     , filepath
                     , text
                     , process
  default-language:    Haskell2010

executable gen-etlas-index
  main-is:             gen/Main.hs
  build-depends:       base >=4.8 && <4.12
                     , directory == 1.0 || == 1.2
                     , filepath
  default-language:    Haskell2010
