name:                alg
version:             0.2.8.0
synopsis:            Algebraic structures
-- description:         
license:             BSD3
license-file:        LICENSE
author:              M Farkas-Dyck
maintainer:          strake888@gmail.com
-- copyright:           
category:            Math
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10
tested-with:         GHC ==8.4.2

library
  exposed-modules:     Algebra
                     , Data.BitSet
                     , Relation.Binary.Comparison
  -- other-modules:       
  other-extensions:    
  build-depends:       base >=4.11 && <5
                     , util >=0.1.9 && <0.2
  -- hs-source-dirs:      
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , LambdaCase
                     , EmptyCase
                     , PartialTypeSignatures
                     , TypeOperators
                     , PolyKinds
                     , FlexibleContexts
                     , FlexibleInstances
                     , StandaloneDeriving
                     , GeneralizedNewtypeDeriving
  ghc-options:         -Wall -Wno-partial-type-signatures
  if impl(ghc > 8.0)
    ghc-options: -Wcompat -Wredundant-constraints 

