Name:                   appar
Version:                0.1.5
Author:                 Kazu Yamamoto <kazu@iij.ad.jp>
Maintainer:             Kazu Yamamoto <kazu@iij.ad.jp>
License:                BSD3
License-File:           LICENSE
Synopsis:               A simple applicative parser
Description:            A simple applicative parser in Parsec style
Category:               Parsing
Cabal-Version:          >= 1.6
Build-Type:             Simple
Extra-Source-Files:     README
library
  GHC-Options:          -Wall 
  if impl(ghc > 8.0)
    GHC-Options: -Wcompat -Wnoncanonical-monadfail-instances
  Exposed-Modules:      Text.Appar.String
                        Text.Appar.ByteString
                        Text.Appar.LazyByteString
  Other-Modules:        Text.Appar.Input
                        Text.Appar.Parser
  Build-Depends:        base >= 4 && < 5, bytestring
Source-Repository head
  Type:                 git
  Location:             git://github.com/kazu-yamamoto/appar.git
