name:             base-compat
version:          0.9.3
license:          MIT
license-file:     LICENSE
copyright:        (c) 2012-2017 Simon Hengel,
                  (c) 2014-2017 João Cristóvão,
                  (c) 2015-2017 Ryan Scott
author:           Simon Hengel <sol@typeful.net>,
                  João Cristóvão <jmacristovao@gmail.com>,
                  Ryan Scott <ryan.gl.scott@gmail.com>
maintainer:       Simon Hengel <sol@typeful.net>,
                  João Cristóvão <jmacristovao@gmail.com>,
                  Ryan Scott <ryan.gl.scott@gmail.com>
build-type:       Simple
cabal-version:    >= 1.8
category:         Compatibility
synopsis:         A compatibility layer for base
description:      Provides functions available in later versions of @base@ to
                  a wider range of compilers, without requiring you to use CPP
                  pragmas in your code.  See the
                  <https://github.com/haskell-compat/base-compat#readme README>
                  for what is covered. Also see the
                  <https://github.com/haskell-compat/base-compat/blob/master/CHANGES.markdown changelog>
                  for recent changes.
                  .
                  Note that @base-compat@ does not add any orphan instances.
                  There is a separate package,
                  @<http://hackage.haskell.org/package/base-orphans base-orphans>@,
                  for that.
                  .
                  In addition, `base-compat` does not backport any data types
                  or type classes. See
                  @<https://github.com/haskell-compat/base-compat#data-types-and-type-classes this section of the README>@
                  for more info.
tested-with:        GHC == 7.0.1,  GHC == 7.0.2,  GHC == 7.0.3,  GHC == 7.0.4
                  , GHC == 7.2.1,  GHC == 7.2.2
                  , GHC == 7.4.1,  GHC == 7.4.2
                  , GHC == 7.6.1,  GHC == 7.6.2,  GHC == 7.6.3
                  , GHC == 7.8.1,  GHC == 7.8.2,  GHC == 7.8.3,  GHC == 7.8.4
                  , GHC == 7.10.1, GHC == 7.10.2, GHC == 7.10.3
                  , GHC == 8.0.1,  GHC == 8.0.2
                  , GHC == 8.2.1
extra-source-files: CHANGES.markdown, README.markdown

source-repository head
  type: git
  location: https://github.com/haskell-compat/base-compat

library
  ghc-options:
      -Wall
  build-depends:
      base >= 4.3 && < 5
  -- if !os(windows) && !os(halvm)
  --     build-depends: unix
  ghc-options:
      -fno-warn-duplicate-exports

  hs-source-dirs:
      src

  exposed-modules:
      Control.Concurrent.Compat
      Control.Concurrent.MVar.Compat
      Control.Monad.Compat
      Control.Monad.ST.Lazy.Unsafe.Compat
      Control.Monad.ST.Unsafe.Compat
      Data.Bits.Compat
      Data.Bool.Compat
      Data.Complex.Compat
      Data.Either.Compat
      Data.Foldable.Compat
      Data.Function.Compat
      Data.Functor.Compat
      Data.Functor.Const.Compat
      Data.IORef.Compat
      Data.List.Compat
      Data.Monoid.Compat
      Data.Proxy.Compat
      Data.Ratio.Compat
      Data.STRef.Compat
      Data.String.Compat
      Data.Type.Coercion.Compat
      Data.Version.Compat
      Data.Word.Compat
      Debug.Trace.Compat
      Foreign.Compat
      Foreign.ForeignPtr.Compat
      Foreign.ForeignPtr.Safe.Compat
      Foreign.ForeignPtr.Unsafe.Compat
      Foreign.Marshal.Alloc.Compat
      Foreign.Marshal.Array.Compat
      Foreign.Marshal.Compat
      Foreign.Marshal.Safe.Compat
      Foreign.Marshal.Unsafe.Compat
      Foreign.Marshal.Utils.Compat
      Numeric.Compat
      Prelude.Compat
      System.Environment.Compat
      System.Exit.Compat
      System.IO.Unsafe.Compat
      Text.Read.Compat

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  other-modules:
      Control.Monad.CompatSpec
      Data.Bits.CompatSpec
      Data.Bool.CompatSpec
      Data.Either.CompatSpec
      Data.Foldable.CompatSpec
      Data.Function.CompatSpec
      Data.Functor.CompatSpec
      Data.IORef.CompatSpec
      Data.List.CompatSpec
      Data.Monoid.CompatSpec
      Data.STRef.CompatSpec
      Data.Version.CompatSpec
      Data.Word.CompatSpec
      Foreign.Marshal.Alloc.CompatSpec
      Foreign.Marshal.Utils.CompatSpec
      Numeric.CompatSpec
      System.Environment.CompatSpec
      Text.Read.CompatSpec
  build-depends:
      base >= 4.3 && < 5
    , base-compat
    , hspec >= 1.8
    , QuickCheck
