name:              bytestring-show
version:           0.3.5.6
x-revision: 1
license:           BSD3
license-file:      LICENSE
author:            Dan Doel
maintainer:        Dan Doel <dan.doel@gmail.com>
homepage:          http://code.haskell.org/~dolio/
category:          Text
synopsis:          Efficient conversion of values into readable byte strings.
description:       Efficient conversion of values into readable byte strings.
build-type:        Simple
cabal-version:     >= 1.6

flag integer-simple
        default: False
        description: use with integer-simple build of GHC

library
    build-depends: base < 5, binary < 0.9, bytestring >= 0.9 && <= 1, array < 0.6, containers < 0.6

    exposed-modules:
        Text.Show.ByteString

    other-modules:
        Text.Show.ByteString.Util
        Text.Show.ByteString.Char
        Text.Show.ByteString.Int
        Text.Show.ByteString.Float
        Text.Show.ByteString.Integer

    ghc-options:
        -O2 -Wall

    if flag(integer-simple)
        cpp-options: -DINTEGER_SIMPLE
        build-depends: integer

    if impl(ghc >= 6.11) && !flag(integer-simple)
        cpp-options: -DINTEGER_GMP
        build-depends: integer >= 0.2

    if impl(ghc >= 6.9) && impl(ghc < 6.11) && !flag(integer-simple)
        cpp-options: -DINTEGER_GMP
        build-depends: integer >= 0.1 && < 0.2

source-repository head
  type: darcs
  location: http://hub.darcs.net/dolio/bytestring-show
