name:                 cql-io
version:              1.0.1.1
synopsis:             Cassandra CQL client.
license:              MPL-2.0
license-file:         LICENSE
author:               Toralf Wittner
maintainer:           Toralf Wittner <tw@dtex.org>,
                      Roman S. Borschel <roman@pkaboo.org>
copyright:            (C) 2014-2016 Toralf Wittner
homepage:             https://gitlab.com/twittner/cql-io/
bug-reports:          https://gitlab.com/twittner/cql-io/issues
category:             Database
build-type:           Simple
cabal-version:        >= 1.10
extra-source-files:   README.md
                      CHANGELOG
                      AUTHORS

description:
    CQL Cassandra driver supporting native protocol versions 3 and 4.
    .
    This library uses the <http://hackage.haskell.org/package/cql cql> library
    which implements Cassandra's CQL protocol and complements it with the
    neccessary I/O operations. The feature-set includes:
    .
    * /Node discovery/. The driver discovers nodes automatically from a small
    set of bootstrap nodes.
    .
    * /Customisable load-balancing policies/. In addition to pre-built LB
    policies such as round-robin, users of this library can provide their
    own policies if desired.
    .
    * /Support for connection streams/. Requests can be multiplexed over a
    few connections.
    .
    * /Customisable retry settings/. Support for default retry settings as well
    as local overrides per query.
    .
    * /Prepared queries/. Prepared queries are an optimisation which parse
    and prepare a query only once on Cassandra nodes but execute it many
    times with different concrete values.
    .
    * /TLS support/. Client to node communication can optionally use transport
    layer security (using HsOpenSSL).

source-repository head
    type:     git
    location: https://gitlab.com/twittner/cql-io

library
    default-language: Haskell2010
    hs-source-dirs:   src
    ghc-options:      -Wall -O2 -fwarn-tabs

    exposed-modules:
        Database.CQL.IO

    other-modules:
        Database.CQL.IO.Batch
        Database.CQL.IO.Client
        Database.CQL.IO.Cluster.Discovery
        Database.CQL.IO.Cluster.Host
        Database.CQL.IO.Cluster.Policies
        Database.CQL.IO.Connection
        Database.CQL.IO.Connection.Socket
        Database.CQL.IO.Connection.Settings
        Database.CQL.IO.Hexdump
        Database.CQL.IO.Jobs
        Database.CQL.IO.Pool
        Database.CQL.IO.PrepQuery
        Database.CQL.IO.Protocol
        Database.CQL.IO.Settings
        Database.CQL.IO.Signal
        Database.CQL.IO.Sync
        Database.CQL.IO.Tickets
        Database.CQL.IO.Timeouts
        Database.CQL.IO.Types

    build-depends:
          async              >= 2.0
        , auto-update        >= 0.1
        , base               >= 4.9   && < 5.0
        , bytestring         >= 0.10
        , containers         >= 0.5
        , cql                >= 4.0
        , cryptohash         >= 0.11
        , data-default-class
        , exceptions         >= 0.4
        , hashable           >= 1.2
        , iproute            >= 1.3
        --, HsOpenSSL          >= 0.11
        , lens               >= 4.4
        , monad-control      >= 0.3
        , mtl                >= 2.1
        , mwc-random         >= 0.13
        , retry              >= 0.7
        , network            >= 2.4
        , semigroups         >= 0.15
        , stm                >= 2.4
        , text               >= 0.11
        , tinylog            >= 0.8
        , time               >= 1.4
        , transformers       >= 0.3
        , transformers-base  >= 0.4
        , unordered-containers >= 0.2
        , uuid               >= 1.2.6
        , vector             >= 0.10

test-suite cql-io-tests
    type:               exitcode-stdio-1.0
    default-language:   Haskell2010
    main-is:            Main.hs
    hs-source-dirs:     test
    ghc-options:        -threaded -Wall -O2 -fwarn-tabs
    build-depends:
          base           >= 4.7
        , containers
        , cql
        , cql-io
        , Decimal
        , iproute        >= 1.7
        , mtl
        , tasty          >= 0.11
        , tasty-hunit    >= 0.9
        , text
        , raw-strings-qq >= 1.1
        , time
        , tinylog
        , uuid           >= 1.3
